@@ -13,7 +13,6 @@ import com.farao_community.farao.data.crac_api.usage_rule.UsageMethod;
 import com.farao_community.farao.data.crac_api.threshold.BranchThresholdRule;
 import com.farao_community.farao.data.crac_impl.ComplexContingency;
 import com.farao_community.farao.data.crac_impl.SimpleCrac;
-import com.farao_community.farao.data.crac_impl.SimpleState;
 import com.farao_community.farao.data.crac_impl.remedial_action.network_action.NetworkActionImpl;
 import com.farao_community.farao.data.crac_impl.remedial_action.network_action.TopologicalActionImpl;
 import com.farao_community.farao.data.crac_impl.remedial_action.range_action.PstRangeActionImpl;
@@ -40,24 +39,15 @@ public final class CommonCracCreation {
             new HashSet<>(Collections.singletonList(new NetworkElement("FFR1AA1  FFR2AA1  1"))));
         crac.addContingency(contingency2);
 
-        // Instant
-        Instant basecase = crac.newInstant().withId("initial").setSeconds(0).add();
-        Instant curative = crac.newInstant().withId("curative").setSeconds(1200).add();
-
         //NetworkElement
         NetworkElement monitoredElement1 = new NetworkElement("BBE2AA1  FFR3AA1  1");
         NetworkElement monitoredElement2 = new NetworkElement("FFR2AA1  DDE3AA1  1");
-
-        // State
-        State stateBasecase = new SimpleState(Optional.empty(), basecase);
-        State stateCurativeContingency1 = new SimpleState(Optional.of(contingency1), curative);
-        State stateCurativeContingency2 = new SimpleState(Optional.of(contingency2), curative);
 
         crac.newBranchCnec()
             .withId("cnec1basecase")
             .addNetworkElement(monitoredElement1)
             .newThreshold().setUnit(Unit.MEGAWATT).setRule(BranchThresholdRule.ON_LEFT_SIDE).setMin(-1500.).setMax(1500.).add()
-            .setInstant(stateBasecase.getInstant())
+            .setInstant(Instant.PREVENTIVE)
             .optimized()
             .setOperator("operator1")
             .add();
@@ -66,8 +56,8 @@ public final class CommonCracCreation {
             .withId("cnec1stateCurativeContingency1")
             .addNetworkElement(monitoredElement1)
             .newThreshold().setUnit(Unit.MEGAWATT).setRule(BranchThresholdRule.ON_LEFT_SIDE).setMin(-1500.).setMax(1500.).add()
-            .setInstant(stateCurativeContingency1.getInstant())
-            .setContingency(stateCurativeContingency1.getContingency().orElseThrow())
+            .setInstant(Instant.CURATIVE)
+            .setContingency(contingency1)
             .optimized()
             .setOperator("operator1")
             .add();
@@ -76,8 +66,8 @@ public final class CommonCracCreation {
             .withId("cnec1stateCurativeContingency2")
             .addNetworkElement(monitoredElement1)
             .newThreshold().setUnit(Unit.MEGAWATT).setRule(BranchThresholdRule.ON_LEFT_SIDE).setMin(-1500.).setMax(1500.).add()
-            .setInstant(stateCurativeContingency2.getInstant())
-            .setContingency(stateCurativeContingency2.getContingency().orElseThrow())
+            .setInstant(Instant.CURATIVE)
+            .setContingency(contingency2)
             .optimized()
             .setOperator("operator1")
             .add();
@@ -87,7 +77,7 @@ public final class CommonCracCreation {
             .addNetworkElement(monitoredElement2)
             .newThreshold().setUnit(Unit.MEGAWATT).setRule(BranchThresholdRule.ON_LEFT_SIDE).setMin(-1500.).setMax(1500.).add()
             .newThreshold().setUnit(Unit.PERCENT_IMAX).setRule(BranchThresholdRule.ON_LEFT_SIDE).setMin(-0.3).setMax(0.3).add()
-            .setInstant(stateBasecase.getInstant())
+            .setInstant(Instant.PREVENTIVE)
             .optimized()
             .setOperator("operator2")
             .add();
@@ -97,8 +87,8 @@ public final class CommonCracCreation {
             .addNetworkElement(monitoredElement2)
             .newThreshold().setUnit(Unit.MEGAWATT).setRule(BranchThresholdRule.ON_LEFT_SIDE).setMin(-1500.).setMax(1500.).add()
             .newThreshold().setUnit(Unit.PERCENT_IMAX).setRule(BranchThresholdRule.ON_LEFT_SIDE).setMin(-0.3).setMax(0.3).add()
-            .setInstant(stateCurativeContingency1.getInstant())
-            .setContingency(stateCurativeContingency1.getContingency().orElseThrow())
+            .setInstant(Instant.CURATIVE)
+            .setContingency(contingency1)
             .optimized()
             .setOperator("operator2")
             .add();
@@ -108,8 +98,8 @@ public final class CommonCracCreation {
             .addNetworkElement(monitoredElement2)
             .newThreshold().setUnit(Unit.MEGAWATT).setRule(BranchThresholdRule.ON_LEFT_SIDE).setMin(-1500.).setMax(1500.).add()
             .newThreshold().setUnit(Unit.PERCENT_IMAX).setRule(BranchThresholdRule.ON_LEFT_SIDE).setMin(-0.3).setMax(0.3).add()
-            .setInstant(stateCurativeContingency2.getInstant())
-            .setContingency(stateCurativeContingency2.getContingency().orElseThrow())
+            .setInstant(Instant.CURATIVE)
+            .setContingency(contingency2)
             .optimized()
             .add();
 
@@ -137,7 +127,7 @@ public final class CommonCracCreation {
 
         PstRangeActionImpl pstRangeAction = new PstRangeActionImpl("pst", pstElement);
         pstRangeAction.setOperator("operator1");
-        pstRangeAction.addUsageRule(new OnStateImpl(UsageMethod.AVAILABLE, crac.getState("Contingency FR1 FR3-curative")));
+        pstRangeAction.addUsageRule(new OnStateImpl(UsageMethod.AVAILABLE, crac.getState("Contingency FR1 FR3", Instant.CURATIVE)));
         crac.addRangeAction(pstRangeAction);
 
         return crac;
@@ -152,8 +142,8 @@ public final class CommonCracCreation {
             "switch_ra",
             "switch_ra_name",
             "OPERATOR",
-            Collections.singletonList(new OnStateImpl(UsageMethod.AVAILABLE, crac.getPreventiveState())),
-            Collections.singleton(topologicalAction)
+            List.of(new OnStateImpl(UsageMethod.AVAILABLE, crac.getPreventiveState())),
+            Set.of(topologicalAction)
         );
 
         crac.addNetworkAction(topologicalRa);
